published on local repo

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,13 +19,16 @@
 
 VERSION_NAME=0.0.1
 VERSION_CODE=1
-GROUP=com.github.evologica
+GROUP=br.com.evologica
 
+POM_ARTIFACT_ID=audio
+POM_NAME=Audio
+POM_PACKAGING=aar
 POM_DESCRIPTION=A library that creates a FAB audio recorder button
-POM_URL=https://github.com/evologica/RecordButton
-POM_SCM_URL=https://github.com/evologica/RecordButton
-POM_SCM_CONNECTION=scm:git@github.com:evologica/RecordButton.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:evologica/RecordButton.git
+POM_URL=https://github.com/evologica/Android-Audio
+POM_SCM_URLhttps://github.com/evologica/Android-Audio
+POM_SCM_CONNECTION=scm:git@github.com:evologica/Android-Audio.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:evologica/Android-Audio.git
 POM_LICENCE_NAME=The MIT License
 POM_LICENCE_URL=https://opensource.org/licenses/MIT
 POM_LICENCE_DIST=repo
