--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-VERSION_NAME=0.0.1
+VERSION_NAME=0.0.2
 VERSION_CODE=1
 GROUP=br.com.evologica
 
@@ -26,7 +26,7 @@ POM_NAME=Audio
 POM_PACKAGING=aar
 POM_DESCRIPTION=A library that creates a FAB audio recorder button
 POM_URL=https://github.com/evologica/Android-Audio
-POM_SCM_URLhttps://github.com/evologica/Android-Audio
+POM_SCM_URL=https://github.com/evologica/Android-Audio
 POM_SCM_CONNECTION=scm:git@github.com:evologica/Android-Audio.git
 POM_SCM_DEV_CONNECTION=scm:git@github.com:evologica/Android-Audio.git
 POM_LICENCE_NAME=The MIT License
